--- a/StoreSearch/Base.lproj/Main.storyboard
+++ b/StoreSearch/Base.lproj/Main.storyboard
@@ -215,20 +215,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J1W-Tm-sAo">
-                                <rect key="frame" x="232" y="150" width="104" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vml-VW-s9w">
+                                <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="w2d-bA-9kT" id="eND-Na-RL5"/>
+                                </connections>
+                            </scrollView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="HNw-8D-jNC">
+                                <rect key="frame" x="264" y="280" width="39" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="pageChanged:" destination="w2d-bA-9kT" eventType="valueChanged" id="JPI-VV-nlG"/>
+                                </connections>
+                            </pageControl>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="J1W-Tm-sAo" firstAttribute="centerX" secondItem="QXi-zx-XNL" secondAttribute="centerX" id="pwn-eV-Gsy"/>
-                            <constraint firstItem="J1W-Tm-sAo" firstAttribute="centerY" secondItem="QXi-zx-XNL" secondAttribute="centerY" id="tO7-KP-ZQX"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="EkK-B3-aAT"/>
                     </view>
+                    <connections>
+                        <outlet property="pageControl" destination="HNw-8D-jNC" id="SYD-Rr-huk"/>
+                        <outlet property="scrollView" destination="vml-VW-s9w" id="lfP-pt-JCx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UNO-c6-gA7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
